In single click segmentation experiment, initialize the project with hydra and load some data in pixeltable

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,7 +9,7 @@ warn_unused_configs = true
 local_partial_types = true
 
 
-[mypy-gold_anomaly,gold_anomaly.*,]
+[mypy-goldener,goldener.*,]
 disallow_untyped_defs = true
 
 [mypy-tests.*,examples.*, tools.*]
@@ -17,3 +17,11 @@ disallow_untyped_defs = false
 
 
 # libraries without expected type annotations
+[mypy-sam2,sam2.*]
+ignore_missing_imports = true
+[mypy-torchvision,torchvision.*]
+ignore_missing_imports = True
+[mypy-fiftyone,fiftyone.*]
+ignore_missing_imports = True
+[mypy-any_gold,any_gold.*]
+ignore_missing_imports = True
