--- a/mypy.ini
+++ b/mypy.ini
@@ -1,13 +1,14 @@
 [mypy]
-mypy_path = stubs
-explicit_package_bases = true
-exclude = examples
+allow_redefinition = true
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+follow_imports = silent
+show_error_codes = true
+strict_optional = false
+warn_return_any = true
 warn_unused_ignores = true
-warn_redundant_casts = true
-warn_unreachable = true
-warn_unused_configs = true
-local_partial_types = true
-
+plugins = tool/pxt_mypy_plugin.py
 
 [mypy-goldener,goldener.*,]
 disallow_untyped_defs = true
