--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,7 @@
 [mypy]
 allow_redefinition = true
 check_untyped_defs = true
+explicit_package_bases = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
 follow_imports = silent
@@ -8,13 +9,11 @@ show_error_codes = true
 strict_optional = false
 warn_return_any = true
 warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unreachable = true
+warn_unused_configs = true
+local_partial_types = true
 plugins = tool/pxt_mypy_plugin.py
-
-[mypy-goldener,goldener.*,]
-disallow_untyped_defs = true
-
-[mypy-tests.*,examples.*, tools.*]
-disallow_untyped_defs = false
 
 
 # libraries without expected type annotations
