--- a/experiments/single_click/config/config.yaml
+++ b/experiments/single_click/config/config.yaml
@@ -12,9 +12,13 @@ load:
 
 pipeline:
   seed: 42
-  k_shots: 5 # how much sample to draw randomly in the dataset
+  k_shots: 10 # how much sample to draw randomly in the dataset
   min_area: 10 # the minimum area of the segmentation mask to be considered valid in ground truth
   num_points: 5 # number of single click points to segment from
+
+visualization:
+  show_logits: False # show logits in the visualization
+  show_mask: True # show mask in the visualization
 
 pixeltable:
   dir_name: single_click
