--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,11 @@ authors = [
 
 requires-python = "==3.13.*"
 dependencies = [
-    "torch",
-    "numpy",
-    "scikit-learn",
-    "pillow",
-    "tqdm",
-    "pandas",
-    "opencv-python",
+  "torch",
+  "numpy",
+  "pixeltable",
+  "ray[default, data]",
+  "nvidia-ml-py",
 ]
 
 [project.optional-dependencies]
