Initialize the global dimension reduction strategy and first tools on sklearn and umap

--- a/mypy.ini
+++ b/mypy.ini
@@ -17,3 +17,7 @@ disallow_untyped_defs = false
 
 
 # libraries without expected type annotations
+[mypy-umap,umap.*]
+ignore_missing_imports = true
+[mypy-sklearn,sklearn.*]
+ignore_missing_imports = true
