--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,26 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-added-large-files
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+
+-   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.2.1
     hooks:
-      - id: ruff
+    -   id: ruff
         args:
-          - --fix
-          - --exit-non-zero-on-fix
-      - id: ruff-format
-  - repo: local
-    hooks:
-      - id: local-mypy
-        name: mypy
-        entry: "uv run mypy"
-        language: python
-        types: [python]
-        require_serial: true
+        - --fix
+        - --exit-non-zero-on-fix
+    -   id: ruff-format
+
+- repo: local
+  hooks:
+    - id: local-mypy
+      name: mypy
+      entry: "uv run mypy"
+      language: python
+      types: [python]
+      require_serial: true
