--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,20 @@
 name = "goldener"
 version = "0.1.0"
 description = "Goldener - Make your data even more valuable"
+readme = "README.md"
+license-files= ["LICENSE"]
+requires-python = ">=3.10"
 authors = [
-    { name = "Yann-CV", email = "yann.chene.tni@gmail.com"}
+    {name = "goldener-data", email = "yann.chene.tni@gmail.com"},
+]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Intended Audience :: Developers",
+  "Intended Audience :: Science/Research",
+  "Programming Language :: Python :: 3.13",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 
-requires-python = "==3.13.*"
 dependencies = [
   "torch",
   "numpy",
@@ -26,3 +35,8 @@ dev = [
   "types-pillow",
   "types-tqdm",
 ]
+
+[project.urls]
+Homepage = "https://github.com/goldener-data/goldener"
+Repository = "https://github.com/goldener-data/goldener"
+Issues = "https://github.com/goldener-data/goldener/issues"
