Add some logging about the computed step and add tqdm to show progress

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
   "scikit-learn",
   "umap-learn",
   "torchvision",
-  "coreax"
+  "coreax",
+  "tqdm",
 ]
 
 [project.optional-dependencies]
