--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 
 dependencies = [
   "torch",
-  "numpy",
+  "numpy<=2.3.5",
   "pixeltable",
   "nvidia-ml-py",
   "scikit-learn",
