Add predefined TensorVectorizers for ViT

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,20 +1,22 @@
 [mypy]
 mypy_path = stubs
-explicit_package_bases = true
+explicit_package_bases = True
 exclude = examples
-warn_unused_ignores = true
-warn_redundant_casts = true
-warn_unreachable = true
-warn_unused_configs = true
-local_partial_types = true
+warn_unused_ignores = True
+warn_redundant_casts = True
+warn_unreachable = True
+warn_unused_configs = True
+local_partial_types = True
 
 
 [mypy-tests.*,examples.*, tools.*]
-disallow_untyped_defs = false
+disallow_untyped_defs = False
 
 
 # libraries without expected type annotations
+[mypy-torchvision.*, torchvision.*]
+ignore_missing_imports = True
 [mypy-umap,umap.*]
-ignore_missing_imports = true
+ignore_missing_imports = True
 [mypy-sklearn,sklearn.*]
-ignore_missing_imports = true
+ignore_missing_imports = True
